@@ -4,34 +4,22 @@
 
 CDSS Models Java Library
 CDSS Models Java Library is a part of Colorado's Decision Support Systems (CDSS)
-Copyright (C) 1994-2019 Colorado Department of Natural Resources
+Copyright (C) 1994-2025 Colorado Department of Natural Resources
 
 CDSS Models Java Library is free software:  you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.
 
-    CDSS Models Java Library is distributed in the hope that it will be useful,
+CDSS Models Java Library is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.
 
-    You should have received a copy of the GNU General Public License
+You should have received a copy of the GNU General Public License
     along with CDSS Models Java Library.  If not, see <https://www.gnu.org/licenses/>.
 
 NoticeEnd */
-
-// ----------------------------------------------------------------------------
-// StateCU_DelayTableAssignment_Data_TableModel - Table model for displaying 
-//	data for delay table assignment worksheets.
-// ----------------------------------------------------------------------------
-// Copyright:   See the COPYRIGHT file
-// ----------------------------------------------------------------------------
-// History:
-// 2005-01-24	J. Thomas Sapienza, RTi	Initial version.
-// 2005-03-29	JTS, RTi		Updated to actually work.
-// 2007-03-01	SAM, RTi		Clean up code based on Eclipse feedback.
-// ----------------------------------------------------------------------------
 
 package DWR.StateCU;
 
@@ -264,15 +252,15 @@ private void setupData() {
 		for (int j = 0; j < num; j++) {
 			__data[__COL_ID].add(id);
 			__data[__COL_DELAY_ID].add(dt.getDelayTableID(j));
-			__data[__COL_PERCENT].add(new Double(dt.getDelayTablePercent(j)));
+			__data[__COL_PERCENT].add(Double.valueOf(dt.getDelayTablePercent(j)));
 			total += dt.getDelayTablePercent(j);
-			__rowMap.add(new Integer(rowCount));
+			__rowMap.add(Integer.valueOf(rowCount));
 			rowCount++;
 		}
 
 		__data[__COL_ID].add(id);
 		__data[__COL_DELAY_ID].add("TOTAL");
-		__data[__COL_PERCENT].add(new Double(total));
+		__data[__COL_PERCENT].add(Double.valueOf(total));
 
 		rowCount++;
 	}
