@@ -4,19 +4,19 @@
 
 CDSS Models Java Library
 CDSS Models Java Library is a part of Colorado's Decision Support Systems (CDSS)
-Copyright (C) 1994-2019 Colorado Department of Natural Resources
+Copyright (C) 1994-2025 Colorado Department of Natural Resources
 
 CDSS Models Java Library is free software:  you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.
 
-    CDSS Models Java Library is distributed in the hope that it will be useful,
+CDSS Models Java Library is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.
 
-    You should have received a copy of the GNU General Public License
+You should have received a copy of the GNU General Public License
     along with CDSS Models Java Library.  If not, see <https://www.gnu.org/licenses/>.
 
 NoticeEnd */
@@ -215,11 +215,11 @@ public Object getValueAt(int row, int col) {
 		case __COL_CROP_NAME:
 			return pm.getName();
 		case __COL_GROWTH_STAGE:
-			return new Integer(igs + 1);
+			return Integer.valueOf(igs + 1);
 		case __COL_PERCENT:
-			return new Double(pm.getKcday(igs, ipos));
+			return Double.valueOf(pm.getKcday(igs, ipos));
 		case __COL_COEFF:
-			return new Double(pm.getKcb(igs, ipos));
+			return Double.valueOf(pm.getKcb(igs, ipos));
 	}
 	return "";
 }
