@@ -4,34 +4,22 @@
 
 CDSS Models Java Library
 CDSS Models Java Library is a part of Colorado's Decision Support Systems (CDSS)
-Copyright (C) 1994-2019 Colorado Department of Natural Resources
+Copyright (C) 1994-2025 Colorado Department of Natural Resources
 
 CDSS Models Java Library is free software:  you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.
 
-    CDSS Models Java Library is distributed in the hope that it will be useful,
+CDSS Models Java Library is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.
 
-    You should have received a copy of the GNU General Public License
+You should have received a copy of the GNU General Public License
     along with CDSS Models Java Library.  If not, see <https://www.gnu.org/licenses/>.
 
 NoticeEnd */
-
-// ----------------------------------------------------------------------------
-// StateMod_ReservoirAccount_Data_TableModel - table model for displaying 
-//	reservoir account data
-// ----------------------------------------------------------------------------
-// Copyright:   See the COPYRIGHT file
-// ----------------------------------------------------------------------------
-// History:
-//
-// 2005-04-04	J. Thomas Sapienza, RTi	Initial version.
-// 2007-03-01	SAM, RTi		Clean up code based on Eclipse feedback.
-// ----------------------------------------------------------------------------
 
 package DWR.StateMod;
 
@@ -198,11 +186,11 @@ public Object getValueAt(int row, int col) {
 		case COL_RESERVOIR_ID:	return rac.getCgoto();
 		case COL_OWNER_ID:	return rac.getID();
 		case COL_OWNER_ACCOUNT:	return rac.getName();
-		case COL_MAX_STORAGE:	return new Double(rac.getOwnmax());
+		case COL_MAX_STORAGE:	return Double.valueOf(rac.getOwnmax());
 		case COL_INITIAL_STORAGE:	
-					return new Double(rac.getCurown());
-		case COL_PRORATE_EVAP:	return new Double(rac.getPcteva());
-		case COL_OWNERSHIP_TIE: return new Integer(rac.getN2own());
+					return Double.valueOf(rac.getCurown());
+		case COL_PRORATE_EVAP:	return Double.valueOf(rac.getPcteva());
+		case COL_OWNERSHIP_TIE: return Integer.valueOf(rac.getN2own());
 		default:	return "";
 	}
 }
@@ -281,7 +269,7 @@ public void setValueAt(Object value, int row, int col)
 			else if (value instanceof String) {
 				int index=((String)value).indexOf(" -");
 				String s = ((String)value).substring( 0, index);
-				dval = (new Double(s)).doubleValue();
+				dval = (Double.valueOf(s)).doubleValue();
 				rac.setPcteva(dval);
 			}
 			break;
@@ -293,7 +281,7 @@ public void setValueAt(Object value, int row, int col)
 			else if (value instanceof String) {
 				String n2owns = (String)value;
 				int index = n2owns.indexOf(" -");
-				ival = new Integer( n2owns.substring(0, index)).intValue();
+				ival = Integer.valueOf( n2owns.substring(0, index)).intValue();
 				rac.setN2own(ival);
 			}
 			break;
