@@ -4,36 +4,22 @@
 
 CDSS Models Java Library
 CDSS Models Java Library is a part of Colorado's Decision Support Systems (CDSS)
-Copyright (C) 1994-2019 Colorado Department of Natural Resources
+Copyright (C) 1994-2025 Colorado Department of Natural Resources
 
 CDSS Models Java Library is free software:  you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.
 
-    CDSS Models Java Library is distributed in the hope that it will be useful,
+CDSS Models Java Library is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.
 
-    You should have received a copy of the GNU General Public License
+You should have received a copy of the GNU General Public License
     along with CDSS Models Java Library.  If not, see <https://www.gnu.org/licenses/>.
 
 NoticeEnd */
-
-// ----------------------------------------------------------------------------
-// StateMod_Reservoir_Collection_Data_TableModel - Table model for displaying 
-//	reservoir collection data.
-// ----------------------------------------------------------------------------
-// Copyright:   See the COPYRIGHT file
-// ----------------------------------------------------------------------------
-// History:
-//
-// 2005-03-30	J. Thomas Sapienza, RTi	Initial version.
-// 2006-04-11	JTS, RTi		Corrected the classes returned from
-//					getColumnClass().
-// 2007-03-01	SAM, RTi		Clean up code based on Eclipse feedback.
-// ----------------------------------------------------------------------------
 
 package DWR.StateMod;
 
@@ -266,7 +252,7 @@ private void setupData() {
 			for (int k = 0; k < size2; k++) {
 				__data[__COL_ID].add(id);
 //				__data[__COL_DIV].add(div);
-				__data[__COL_YEAR].add(new Integer(years[j]));
+				__data[__COL_YEAR].add(Integer.valueOf(years[j]));
 				__data[__COL_COL_TYPE].add(colType.toString());
 				__data[__COL_PART_TYPE].add(partType.toString());
 				__data[__COL_PART_ID].add(ids.get(k));
