@@ -5,33 +5,22 @@
 
 CDSS Models Java Library
 CDSS Models Java Library is a part of Colorado's Decision Support Systems (CDSS)
-Copyright (C) 1994-2019 Colorado Department of Natural Resources
+Copyright (C) 1994-2025 Colorado Department of Natural Resources
 
 CDSS Models Java Library is free software:  you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.
 
-    CDSS Models Java Library is distributed in the hope that it will be useful,
+CDSS Models Java Library is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.
 
-    You should have received a copy of the GNU General Public License
+You should have received a copy of the GNU General Public License
     along with CDSS Models Java Library.  If not, see <https://www.gnu.org/licenses/>.
 
 NoticeEnd */
-
-// ----------------------------------------------------------------------------
-// StateMod_ReturnFlow_Data_TableModel - Table model for displaying data in the
-//	return flow tables (for return flows and depletions).
-// ----------------------------------------------------------------------------
-// Copyright:   See the COPYRIGHT file
-// ----------------------------------------------------------------------------
-// History:
-//
-// 2005-04-04	J. Thomas Sapienza, RTi	Initial version.
-// ----------------------------------------------------------------------------
 
 package DWR.StateMod;
 
@@ -214,8 +203,8 @@ public Object getValueAt(int row, int col) {
 	StateMod_ReturnFlow rf = _data.get(row);
 	switch (col) {
 		case COL_RIVER_NODE:	return rf.getCrtnid();
-		case COL_RETURN_PCT:	return new Double(rf.getPcttot());
-		case COL_RETURN_ID:	return new Integer(rf.getIrtndl());
+		case COL_RETURN_PCT:	return Double.valueOf(rf.getPcttot());
+		case COL_RETURN_ID:	return Integer.valueOf(rf.getIrtndl());
 		default:		return "";
 	}
 }
