@@ -4,34 +4,22 @@
 
 CDSS Models Java Library
 CDSS Models Java Library is a part of Colorado's Decision Support Systems (CDSS)
-Copyright (C) 1994-2019 Colorado Department of Natural Resources
+Copyright (C) 1994-2025 Colorado Department of Natural Resources
 
 CDSS Models Java Library is free software:  you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.
 
-    CDSS Models Java Library is distributed in the hope that it will be useful,
+CDSS Models Java Library is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.
 
-    You should have received a copy of the GNU General Public License
+You should have received a copy of the GNU General Public License
     along with CDSS Models Java Library.  If not, see <https://www.gnu.org/licenses/>.
 
 NoticeEnd */
-
-// ----------------------------------------------------------------------------
-// StateMod_Save_TableModel - table model for displaying the save table.
-// ----------------------------------------------------------------------------
-// Copyright:   See the COPYRIGHT file
-// ----------------------------------------------------------------------------
-// History:
-// 2003-09-10	J. Thomas Sapienza, RTi	Initial version.
-// 2004-01-22	JTS, RTi		Removed the row count column and 
-//					changed all the other column numbers.
-// 2004-08-25	JTS, RTi		Renamed column 0.
-// ----------------------------------------------------------------------------
 
 package DWR.StateMod;
 
@@ -105,7 +93,7 @@ throws Exception {
 			// get the dirty components -- they can be saved 
 			// (or not).
 			if (dsc.isDirty()) {
-				ints.add(new Integer(dsc.getComponentType()));
+				ints.add(Integer.valueOf(dsc.getComponentType()));
 			}
 		}
 	}
