@@ -4,34 +4,22 @@
 
 CDSS Models Java Library
 CDSS Models Java Library is a part of Colorado's Decision Support Systems (CDSS)
-Copyright (C) 1994-2019 Colorado Department of Natural Resources
+Copyright (C) 1994-2025 Colorado Department of Natural Resources
 
 CDSS Models Java Library is free software:  you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.
 
-    CDSS Models Java Library is distributed in the hope that it will be useful,
+CDSS Models Java Library is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.
 
-    You should have received a copy of the GNU General Public License
+You should have received a copy of the GNU General Public License
     along with CDSS Models Java Library.  If not, see <https://www.gnu.org/licenses/>.
 
 NoticeEnd */
-
-// ----------------------------------------------------------------------------
-// StateMod_Well_Collection_Data_TableModel - Table model for displaying 
-//	reservoir collection data.
-// ----------------------------------------------------------------------------
-// Copyright:   See the COPYRIGHT file
-// ----------------------------------------------------------------------------
-// History:
-//
-// 2005-04-07	J. Thomas Sapienza, RTi	Initial version.
-// 2007-03-01	SAM, RTi		Clean up code based on Eclipse feedback.
-// ----------------------------------------------------------------------------
 
 package DWR.StateMod;
 
@@ -39,7 +27,6 @@ import java.util.List;
 import java.util.Vector;
 
 import RTi.Util.GUI.JWorksheet_AbstractRowTableModel;
-import RTi.Util.Message.Message;
 
 /**
 This class is a table model for displaying reservoir collection data.
@@ -292,7 +279,7 @@ private void setupData() {
 
 			for (int k = 0; k < nParts; k++) {
 				__data[__COL_ID].add(id);
-				__data[__COL_YEAR].add(new Integer(years[j]));
+				__data[__COL_YEAR].add(Integer.valueOf(years[j]));
 				if ( colType == null ) {
 					__data[__COL_COL_TYPE].add(null);
 				}
@@ -307,7 +294,7 @@ private void setupData() {
 				}
 				__data[__COL_PART_ID].add(ids.get(k));
 				if ( nIdTypes != 0 ) {
-					idType = idTypes.get(k); // Should align with ids.get(k)
+					idType = idTypes.get(k); // Should align with ids.get(k).
 				}
 				if ( idType == null ) {
 					__data[__COL_PART_ID_TYPE].add(null);
