@@ -4,34 +4,22 @@
 
 CDSS Models Java Library
 CDSS Models Java Library is a part of Colorado's Decision Support Systems (CDSS)
-Copyright (C) 1994-2019 Colorado Department of Natural Resources
+Copyright (C) 1994-2025 Colorado Department of Natural Resources
 
 CDSS Models Java Library is free software:  you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.
 
-    CDSS Models Java Library is distributed in the hope that it will be useful,
+CDSS Models Java Library is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.
 
-    You should have received a copy of the GNU General Public License
+You should have received a copy of the GNU General Public License
     along with CDSS Models Java Library.  If not, see <https://www.gnu.org/licenses/>.
 
 NoticeEnd */
-
-// ----------------------------------------------------------------------------
-// StateMod_Well_DelayTableAssignment_Data_TableModel - Table model for 
-//	displaying data for delay table assignment worksheets.
-// ----------------------------------------------------------------------------
-// Copyright:   See the COPYRIGHT file
-// ----------------------------------------------------------------------------
-// History:
-//
-// 2005-04-04	J. Thomas Sapienza, RTi	Initial version.
-// 2007-03-01	SAM, RTi		Clean up code based on Eclipse feedback.
-// ----------------------------------------------------------------------------
 
 package DWR.StateMod;
 
@@ -274,16 +262,16 @@ private void setupData() {
 			rf = returnFlows.get(j);
 			__data[__COL_ID].add(id);
 			__data[__COL_NODE_ID].add(rf.getCrtnid());
-			__data[__COL_PERCENT].add(new Double(rf.getPcttot()));
+			__data[__COL_PERCENT].add(Double.valueOf(rf.getPcttot()));
 			__data[__COL_DELAY_ID].add("" + rf.getIrtndl());
 			total += rf.getPcttot();
-			__rowMap.add(new Integer(rowCount));
+			__rowMap.add(Integer.valueOf(rowCount));
 			rowCount++;
 		}
 
 		__data[__COL_ID].add(id);
 		__data[__COL_NODE_ID].add("TOTAL");
-		__data[__COL_PERCENT].add(new Double(total));
+		__data[__COL_PERCENT].add(Double.valueOf(total));
 		__data[__COL_DELAY_ID].add("");
 
 		rowCount++;
